# Cashflow

./: .gitignore  CLAUDE.md  Cash_Flow_Analysis_2022-2027.xlsx
analysis/: build_excel.py
cashflow-web/backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
cashflow-web/backend/app/: config.py  main.py  seed.py
cashflow-web/backend/app/api/: audit.py  auth.py  deps.py  errors.py  export.py  planning.py  schemas.py
cashflow-web/backend/app/api/fonts/: README.md
cashflow-web/backend/app/api/routers/: _utils.py  alerts.py  breakdown.py  cashflow.py  dashboard.py  etl.py  forecast.py  installments.py  meta.py  notes.py  payment_plans.py  scenarios.py  settings.py  supplier_plan.py  suppliers.py
cashflow-web/backend/app/db/: base.py  models.py
cashflow-web/backend/app/domain/: alerts.py  allocation.py  classify.py  forecast.py
cashflow-web/backend/app/etl/: extract.py  load.py  pipeline.py  reconcile.py  scheduler.py
cashflow-web/backend/app/migrations/: env.py
cashflow-web/backend/tests/: conftest.py  test_config.py  test_constraints.py  test_migrations.py  test_schema.py  test_seed.py
cashflow-web/backend/tests/api/: conftest.py  test_auth.py  test_etl_endpoints.py  test_export.py  test_health.py  test_read_endpoints.py  test_write_endpoints.py
cashflow-web/backend/tests/domain/: test_alerts.py  test_allocation.py  test_classify.py  test_forecast.py
cashflow-web/backend/tests/etl/: test_extract.py  test_load_allowlist.py  test_load_analytics.py  test_load_swap.py  test_pipeline.py  test_reconcile.py  test_scheduler.py
(+93 files in other folders)
