[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cashflow-backend"
version = "0.1.0"
description = "نظام إدارة السيولة النقدية — معرض البيت السعيد (خلفية)"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pymssql>=2.3",
  "pandas>=2.2",
  "pydantic-settings>=2.3",
  "apscheduler>=3.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "argon2-cffi>=23",
  "itsdangerous>=2",
  "openpyxl>=3.1",
  "numpy>=2.0",
  "fpdf2>=2.8",
  "arabic-reshaper>=3.0",
  "python-bidi>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
